fixed z-indexz- index and rendered body overflow visible

--- a/styles.css
+++ b/styles.css
@@ -81,7 +81,7 @@ body{
     bottom: 0;
     left: 0;
     right: 0;
-    z-index: -1;
+    z-index: 0;
     
     animation: fadeIn 2s;
 }
@@ -302,7 +302,6 @@ canvas{
 
 @media all and (max-width:1100px){
     body{
-        overflow: auto;
 
         margin: 0;
         display: flex;
